parsing of LIST_MESSAGES, and unit tests